--- a/app/src/main/res/layout/activity_main1.xml
+++ b/app/src/main/res/layout/activity_main1.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main2"
     android:layout_width="match_parent"
@@ -10,6 +10,14 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.greedygame.samplelist.MainActivity1">
 
+    <EditText
+        android:id="@+id/searchBar"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="2dp"
+        android:padding="5dp"
+        android:completionThreshold="1"/>
+
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -18,4 +26,4 @@
         android:layout_marginTop="29dp"
         android:id="@+id/listview1" />
 
-</LinearLayout>
+</RelativeLayout>
