--- a/app/src/main/res/layout/activity_main1.xml
+++ b/app/src/main/res/layout/activity_main1.xml
@@ -26,4 +26,12 @@
         android:layout_marginTop="29dp"
         android:id="@+id/listview1" />
 
+    <Switch
+        android:text="switch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/switch4"
+        />
+
+
 </RelativeLayout>
